cmake_minimum_required (VERSION 3.8)

set(CMAKE_CXX_STANDARD 20)

project ("Algorithms")


add_subdirectory ("AvlTree")
add_subdirectory ("BinarySearch")
add_subdirectory ("Command")
add_subdirectory ("FactoryMethod")
add_subdirectory ("HashTable")
add_subdirectory ("Heap")
add_subdirectory ("LinkList")
add_subdirectory ("Observer")
add_subdirectory ("RingBuffer")
add_subdirectory ("SingleTon")
add_subdirectory ("Stack")
add_subdirectory ("Tree")
add_subdirectory ("Vector")
add_subdirectory ("Visitor")
add_subdirectory ("WaiteQueue")
